Fixed typo, removed checkpoint folder

--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -462,7 +462,7 @@
     "Question c) - Anything interesting?\n",
     "One thing I found interesting is that the data for patient ages was entered incorrectly, or they're taking xrays of really dead people. There is a max age of 414!\n",
     "\n",
-    "I also found it interesting that the majority (a little under half) of the data from the x-rays have- labels of 'No Finding', or the xrays were done but didn't show any conclusive evidence. This makes me wonder whether the x-rays were performed on patients as precautions or due to other factors, such as repiratory issues (which are some of the other findings)"
+    "I also found it interesting that the majority (a little under half) of the data from the x-rays have- labels of 'No Finding', or the xrays were done but didn't show any conclusive evidence. This makes me wonder whether the x-rays were performed on patients as precautions or due to other factors, such as respiratory issues (which are some of the other findings)."
    ]
   },
   {
