--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -15,11 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "# The line below is used to allow inline plotting of matplotlib graphs\n",
     "%matplotlib inline\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -195,7 +194,7 @@
        "max      4715.000000                     0.198800       0.198800          NaN  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +346,7 @@
        "4                        0.143  0.143          NaN  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +374,7 @@
        "836"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +412,7 @@
        "Name: Patient Age, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,16 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x17019f2f5f8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1872b000048>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -467,77 +466,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "No Finding                                                                     60361\n",
-       "Infiltration                                                                    9547\n",
-       "Atelectasis                                                                     4215\n",
-       "Effusion                                                                        3955\n",
-       "Nodule                                                                          2705\n",
-       "Pneumothorax                                                                    2194\n",
-       "Mass                                                                            2139\n",
-       "Effusion|Infiltration                                                           1603\n",
-       "Atelectasis|Infiltration                                                        1350\n",
-       "Consolidation                                                                   1310\n",
-       "Atelectasis|Effusion                                                            1165\n",
-       "Pleural_Thickening                                                              1126\n",
-       "Cardiomegaly                                                                    1093\n",
-       "Emphysema                                                                        892\n",
-       "Infiltration|Nodule                                                              829\n",
-       "Atelectasis|Effusion|Infiltration                                                737\n",
-       "Fibrosis                                                                         727\n",
-       "Edema                                                                            628\n",
-       "Cardiomegaly|Effusion                                                            484\n",
-       "Consolidation|Infiltration                                                       441\n",
-       "Infiltration|Mass                                                                420\n",
-       "Effusion|Pneumothorax                                                            403\n",
-       "Effusion|Mass                                                                    402\n",
-       "Atelectasis|Consolidation                                                        398\n",
-       "Mass|Nodule                                                                      394\n",
-       "Edema|Infiltration                                                               392\n",
-       "Infiltration|Pneumothorax                                                        345\n",
-       "Emphysema|Pneumothorax                                                           337\n",
-       "Consolidation|Effusion                                                           337\n",
-       "Pneumonia                                                                        322\n",
-       "                                                                               ...  \n",
-       "Atelectasis|Cardiomegaly|Consolidation|Edema                                       1\n",
-       "Cardiomegaly|Consolidation|Effusion|Infiltration|Mass|Nodule                       1\n",
-       "Consolidation|Edema|Effusion|Pneumonia                                             1\n",
-       "Atelectasis|Consolidation|Effusion|Infiltration|Nodule|Pleural_Thickening          1\n",
-       "Atelectasis|Cardiomegaly|Effusion|Infiltration|Mass|Pleural_Thickening             1\n",
-       "Atelectasis|Emphysema|Fibrosis|Nodule                                              1\n",
-       "Pleural_Thickening|Nodule                                                          1\n",
-       "Emphysema|Mass|Nodule|Pleural_Thickening                                           1\n",
-       "Atelectasis|Emphysema|Fibrosis|Infiltration|Nodule|Pneumothorax                    1\n",
-       "Atelectasis|Consolidation|Pleural_Thickening|Pneumothorax                          1\n",
-       "Consolidation|Effusion|Emphysema                                                   1\n",
-       "Consolidation|Emphysema|Infiltration|Nodule|Pleural_Thickening|Pneumothorax        1\n",
-       "Fibrosis|Infiltration|Nodule|Pneumonia                                             1\n",
-       "Atelectasis|Edema|Effusion|Hernia|Infiltration                                     1\n",
-       "Infiltration|Mass|Nodule|Pneumonia                                                 1\n",
-       "Emphysema|Fibrosis|Infiltration                                                    1\n",
-       "Edema|Effusion|Emphysema|Infiltration                                              1\n",
-       "Cardiomegaly|Infiltration|Nodule|Pneumonia                                         1\n",
-       "Emphysema|Mass|Nodule|Pleural_Thickening|Pneumothorax                              1\n",
-       "Atelectasis|Cardiomegaly|Consolidation|Effusion|Infiltration|Mass                  1\n",
-       "Atelectasis|Consolidation|Effusion|Fibrosis|Infiltration|Pleural_Thickening        1\n",
-       "Atelectasis|Infiltration|Mass|Pneumonia                                            1\n",
-       "Cardiomegaly|Infiltration|Mass|Nodule                                              1\n",
-       "Consolidation|Edema|Pneumothorax                                                   1\n",
-       "Effusion|Emphysema|Fibrosis|Mass|Nodule                                            1\n",
-       "Hernia|Infiltration|Pneumonia                                                      1\n",
-       "Edema|Infiltration|Mass|Nodule                                                     1\n",
-       "Effusion|Pneumothorax|Pneumonia                                                    1\n",
-       "Infiltration|Effusion                                                              1\n",
-       "Atelectasis|Edema|Effusion|Mass|Pneumothorax                                       1\n",
+       "No Finding                                                                                        60361\n",
+       "Infiltration                                                                                       9547\n",
+       "Atelectasis                                                                                        4215\n",
+       "Effusion                                                                                           3955\n",
+       "Nodule                                                                                             2705\n",
+       "Pneumothorax                                                                                       2194\n",
+       "Mass                                                                                               2139\n",
+       "Effusion|Infiltration                                                                              1603\n",
+       "Atelectasis|Infiltration                                                                           1350\n",
+       "Consolidation                                                                                      1310\n",
+       "Atelectasis|Effusion                                                                               1165\n",
+       "Pleural_Thickening                                                                                 1126\n",
+       "Cardiomegaly                                                                                       1093\n",
+       "Emphysema                                                                                           892\n",
+       "Infiltration|Nodule                                                                                 829\n",
+       "Atelectasis|Effusion|Infiltration                                                                   737\n",
+       "Fibrosis                                                                                            727\n",
+       "Edema                                                                                               628\n",
+       "Cardiomegaly|Effusion                                                                               484\n",
+       "Consolidation|Infiltration                                                                          441\n",
+       "Infiltration|Mass                                                                                   420\n",
+       "Effusion|Pneumothorax                                                                               403\n",
+       "Effusion|Mass                                                                                       402\n",
+       "Atelectasis|Consolidation                                                                           398\n",
+       "Mass|Nodule                                                                                         394\n",
+       "Edema|Infiltration                                                                                  392\n",
+       "Infiltration|Pneumothorax                                                                           345\n",
+       "Emphysema|Pneumothorax                                                                              337\n",
+       "Consolidation|Effusion                                                                              337\n",
+       "Pneumonia                                                                                           322\n",
+       "                                                                                                  ...  \n",
+       "Edema|Pneumonia|Infiltration                                                                          1\n",
+       "Infiltration|Mass|Nodule|Pneumonia                                                                    1\n",
+       "Atelectasis|Cardiomegaly|Consolidation|Edema                                                          1\n",
+       "Atelectasis|Edema|Effusion|Infiltration|Pleural_Thickening                                            1\n",
+       "Effusion|Fibrosis|Mass|Pleural_Thickening                                                             1\n",
+       "Emphysema|Pneumothorax|Pneumonia                                                                      1\n",
+       "Atelectasis|Consolidation|Effusion|Fibrosis|Infiltration|Mass                                         1\n",
+       "Effusion|Emphysema|Infiltration|Nodule|Pleural_Thickening                                             1\n",
+       "Atelectasis|Emphysema|Mass|Pleural_Thickening|Pneumothorax                                            1\n",
+       "Consolidation|Hernia|Mass                                                                             1\n",
+       "Atelectasis|Cardiomegaly|Fibrosis|Pleural_Thickening                                                  1\n",
+       "Atelectasis|Cardiomegaly|Edema|Effusion|Infiltration|Nodule|Pneumonia                                 1\n",
+       "Atelectasis|Consolidation|Emphysema|Mass|Pneumothorax                                                 1\n",
+       "Emphysema|Infiltration|Mass|Pleural_Thickening                                                        1\n",
+       "Consolidation|Pleural_Thickening|Infiltration                                                         1\n",
+       "Atelectasis|Consolidation|Edema|Effusion|Infiltration|Mass|Nodule|Pleural_Thickening|Pneumonia        1\n",
+       "Atelectasis|Consolidation|Emphysema|Infiltration|Pneumothorax                                         1\n",
+       "Atelectasis|Consolidation|Effusion|Nodule|Pneumothorax                                                1\n",
+       "Cardiomegaly|Effusion|Infiltration|Pneumonia                                                          1\n",
+       "Consolidation|Emphysema|Infiltration|Mass|Nodule                                                      1\n",
+       "Atelectasis|Consolidation|Effusion|Infiltration|Pleural_Thickening|Pneumothorax                       1\n",
+       "Atelectasis|Cardiomegaly|Effusion|Infiltration|Pneumothorax                                           1\n",
+       "Atelectasis|Consolidation|Effusion|Infiltration|Pneumonia                                             1\n",
+       "Edema|Effusion|Nodule|Mass                                                                            1\n",
+       "Cardiomegaly|Consolidation|Effusion|Infiltration|Mass|Pleural_Thickening                              1\n",
+       "Cardiomegaly|Consolidation|Edema|Effusion|Pleural_Thickening                                          1\n",
+       "Edema|Effusion|Infiltration|Pneumothorax                                                              1\n",
+       "Atelectasis|Hernia|Infiltration|Mass|Nodule|Pneumothorax                                              1\n",
+       "Edema|Infiltration|Mass|Nodule|Pleural_Thickening                                                     1\n",
+       "Cardiomegaly|Edema|Effusion|Infiltration|Mass|Pleural_Thickening|Pneumonia                            1\n",
        "Name: Finding Labels, Length: 836, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,6 +544,49 @@
    "source": [
     "findings.value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Atelectasis',\n",
+       " 'Cardiomegaly',\n",
+       " 'Consolidation',\n",
+       " 'Edema',\n",
+       " 'Effusion',\n",
+       " 'Emphysema',\n",
+       " 'Fibrosis',\n",
+       " 'Hernia',\n",
+       " 'Infiltration',\n",
+       " 'Mass',\n",
+       " 'No Finding',\n",
+       " 'Nodule',\n",
+       " 'Pleural_Thickening',\n",
+       " 'Pneumonia',\n",
+       " 'Pneumothorax'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Build a list of items in findings that don't have multiple issues\n",
+    "#  and make a set out of the list to extract unique items\n",
+    "set([ x for x in findings if '|' not in x ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
